--- a/react-with-ts/src/TutorialShoppingCart/StyleSCSS/Navbar.scss
+++ b/react-with-ts/src/TutorialShoppingCart/StyleSCSS/Navbar.scss
@@ -1,9 +1,41 @@
 .navbar{
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     border: 2px solid lightblue;
-    height: 50px;
+    // height: 50px;
+    
 }
-
+.nav{
+    // border: 2px solid ;
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+}
 .Link{
     
     text-decoration: none;
+}
+
+.logo{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    position: relative;
+}
+
+.indicator{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: translate(25%, 25%);
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
 }
