--- a/react-with-ts/src/TutorialShoppingCart/StyleSCSS/StoreItem.scss
+++ b/react-with-ts/src/TutorialShoppingCart/StyleSCSS/StoreItem.scss
@@ -1,3 +1,24 @@
 .itemWrapper{
-    
+    display: flex;
+    flex-direction: column;
+    // background-color: burlywood;
+    margin: 10px;
+    height: 200px;
+    width: 300px;
+}
+
+.itemInfo{
+    background-color: lightgrey;
+    // border: 1px solid blue;
+    height: 50%;
+    width: 100%;
+}
+
+.itemToCart{
+
+    background-color:lightblue;
+    // border: 1px solid blue;
+    width: 100%;
+
+    height: 50%;
 }
