--- a/react-with-ts/src/TutorialToDo/Styles.SCSS/InputField.scss
+++ b/react-with-ts/src/TutorialToDo/Styles.SCSS/InputField.scss
@@ -14,7 +14,7 @@
 .inputField{
     padding-left: 15px;
     background-color: rgb(224, 225, 248);
-    position: relative;
+    // position: absolute;
     height: 40px;
     width: 200px;
     border-radius: 20px;
@@ -22,22 +22,24 @@
     box-shadow: 0px 0px 10px black;
 }
 
-.submitButton{
-    color: lightgray;
-    background-color: rgb(65, 65, 208);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 28px;
-    right: 360px;
-    width: 30px;
-    height: 30px;
-    border: 0;
-    border-radius: 50%;
-    font-size: 10px;
-    box-shadow: 0px 0px 5px black;
-}
+    .submitButton{
+        color: lightgray;
+        background-color: rgb(65, 65, 208);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -35px;
+        right: -180px;
+        width: 30px;
+        height: 30px;
+        border: 0;
+        border-radius: 50%;
+        font-size: 10px;
+        box-shadow: 0px 0px 5px black;
+    }
+
+
 .submitButton:active{
     transform: scale(0.8);
 }
