--- a/react-with-ts/src/TutorialToDo/Styles.SCSS/Main.scss
+++ b/react-with-ts/src/TutorialToDo/Styles.SCSS/Main.scss
@@ -6,8 +6,8 @@
     flex-direction: column;
     // justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;
+    width: 400px;
+    height: 200px;
 }
 
 .header{
